--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <pre xml:space="preserve" id="contact" style="font-size: 12px">
 
 email: shubhtuls AT cmu.edu
-Office: Smith Hall 230
+Office: Smith Hall 213
   </pre>
   <script xml:space="preserve" language="JavaScript">
   hideblock('contact');
@@ -55,10 +55,7 @@ Office: Smith Hall 230
 <br>
 <table width="90%" width="90%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2">
-Our group is interested in inferring physically and spatially grounded representations from perceptual input, and leveraging these for advances in fundamental problems in computer vision and robot manipulation. We believe that to enable machines to understand the physical world, we should reduce the reliance on supervision by annotation, and instead develop learning mechanisms informed by the real, physical world we live in – by incorporating our knowledge about its structure and laws as a 'meta-supervisory' signal.
-<br><br>
-
-We are always looking for strongly motivated PhD and MS students. If you are interested in joining our group, please <a href="javascript:toggleblock('prospective')">read this</a>.
+Our group is interested in inferring physically and spatially grounded representations from perceptual input, and leveraging these for advances in fundamental problems in computer vision and robot manipulation. We are always looking for strongly motivated PhD and MS students. If you are interested in joining our group, please <a href="javascript:toggleblock('prospective')">read this</a>.
 <br>
 <br>
 
@@ -109,7 +106,8 @@ We do not have any short-term positions at this time.
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
       <a href="https://himangim.github.io/">Himangi Mittal</a><br>
       <a href="https://qitaozhao.github.io/">Qitao Zhao</a><br>
-      <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (co-advised with  Fernando De la Torre) <br>
+      <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (co-advised with  Fernando De la Torre) <br>      
+      <a href="https://yuxuank.com/">Yuxuan Kuang</a>  (co-advised with  Katerina Fragkiadaki) <br>
     </td>
     </tr>
     <tr><td><br></td></tr>
@@ -118,16 +116,13 @@ We do not have any short-term positions at this time.
       <b>MS Students</b><br>
       <a href="https://kidrauh.github.io/">Clara Cong</a> (MSCV)<br>
       <a href="https://lucas-707.github.io/">Lucas Wu</a> (MSR)<br>
-      <a href="https://www.linkedin.com/in/rena-ju/">Rena Ju</a> (MSCV)<br>
+      <a href="https://msjeon.me/">Minsik Jeon</a> (MSR)<br>
+      <a href="https://babayaga840.github.io/">Soumojit Bhattacharya</a> (co-advised with Oliver Kroemer, MSR)<br>
       <a href="https://rureadyo.github.io/">Sungjae Park</a> (MSR)<br>
     </td>
   </tr>
   <tr><td><br></td></tr>
   <tr>
-  <td>
-    <b>Undergraduate Students</b><br>
-    <a href="https://www.linkedin.com/in/isaaclin04/">Isaac Lin</a><br>
-  </td>
 </tr>
   <tr><td><br></td></tr>
   <tr><td><b>Alumni</b><br>
@@ -144,7 +139,7 @@ We do not have any short-term positions at this time.
     <br>
 
     <em>MSCV</em>: 
-    <a href="https://qitaozhao.github.io/">Qitao Zhao</a>, 
+    <a href="https://www.linkedin.com/in/rena-ju/">Rena Ju</a>, 
     <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a>,
     <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>, <br>
     <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a>,
@@ -167,9 +162,9 @@ We do not have any short-term positions at this time.
 <br>
 <table width="90%" width="90%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2">
-  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2024, 2023, 2022 <br>
+  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2024, Fall 2023, Fall 2022 <br>
   <a href="https://visual-learning.cs.cmu.edu/">16-824: Visual Learning and Recognition</a>. Spring 2025 <br>
-  <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Spring 2025, 2024, 2023, 2022
+  <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Fall 2025, Spring 2025, Spring 2024, Spring 2023, Spring 2022
 </td></tr>
 </table>
 
@@ -178,6 +173,31 @@ We do not have any short-term positions at this time.
 
 <div class="section">
 <h2> Publications (<a href="javascript:showall()" id="unselect" >all</a> | <a href="javascript:showselected()" id="select" >selected</a>) </h2><br><div class="year_heading" data-selected="n"><br>2025<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="iccv25lightswitch" data-selected="y">
+<video class="paper" muted autoplay loop> 
+ <source src="https://yehonathanlitman.github.io/light_switch/videos/teaser/lightswitch_teaser_kitchen.mp4" type="video/mp4"> 
+ </video> 
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">LightSwitch: Multi-view Relighting with Material-guided Diffusion</b> <br/> 
+Yehonathan Litman, Fernando De la Torre, <strong>Shubham Tulsiani</strong> <br/> 
+ICCV, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2508.06494">pdf </a>  &nbsp <a href="https://yehonathanlitman.github.io/light_switch/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv25lightswitchBib')">bibtex </a>  &nbsp <a href="https://github.com/yehonathanlitman/LightSwitch">code </a> </p>
+<div class="papermeta" id="iccv25lightswitchMeta">
+<pre xml:space="preserve" id="iccv25lightswitchBib">
+
+@inproceedings{litman2025lightswitch,
+	title={LightSwitch: Multi-view Relighting with Material-guided Diffusion},
+	author={Yehonathan Litman and Fernando De la Torre and Shubham Tulsiani},
+	booktitle = {ICCV},
+	year={2025}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('iccv25lightswitchBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
 <!--------------------------------------------------------------------------->
 <div class="paper" id="cvpr25diffusionsfm" data-selected="y">
 <img class="paper" src="https://qitaozhao.github.io/images/DiffusionSfM.gif" />
@@ -202,7 +222,7 @@ hideblock('cvpr25diffusionsfmBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr25uniphy" data-selected="y">
+<div class="paper" id="cvpr25uniphy" data-selected="n">
 <img class="paper" src="https://himangim.github.io/images/grid_animation.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">UniPhy: Learning a Unified Constitutive Model for Inverse Physics Simulation</b> <br/> 
 Himangi Mittal, Peiye Zhuang, Hsin-Ying Lee, <strong>Shubham Tulsiani</strong> <br/> 
@@ -225,7 +245,7 @@ hideblock('cvpr25uniphyBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr25aerialmegadepth" data-selected="y">
+<div class="paper" id="cvpr25aerialmegadepth" data-selected="n">
 <video class="paper" muted autoplay loop> 
  <source src="https://www.khiemvuong.com/projects/aerialmd_cvpr25/teaser_cvpr2025.m4v" type="video/mp4"> 
  </video> 
@@ -296,11 +316,11 @@ hideblock('cvpr25scenefactorBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="3dv25materialfusion" data-selected="y">
+<div class="paper" id="3dv25materialfusion" data-selected="n">
 <video class="paper" muted autoplay loop> 
  <source src="https://yehonathanlitman.github.io/images/materialfusion.mp4" type="video/mp4"> 
  </video> 
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">MaterialFusion: Enhancing Inverse Rendering with Material Diffusion Priors</b> <br/> 
+<p><b id="papertitle">MaterialFusion: Enhancing Inverse Rendering with Material Diffusion Priors</b> <br/> 
 Yehonathan Litman, Or Patashnik, Kangle Deng, Aviral Agrawal, Rushikesh Zawar, Fernando De la Torre, <strong>Shubham Tulsiani</strong> <br/> 
 3DV, 2025 <br/> 
 <a href="https://arxiv.org/pdf/2409.15273">pdf </a>  &nbsp <a href="https://yehonathanlitman.github.io/material_fusion/">project page </a>  &nbsp <a href="javascript:toggleblock('3dv25materialfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/yehonathanlitman/MaterialFusion">code </a> </p>
@@ -323,7 +343,7 @@ hideblock('3dv25materialfusionBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="3dv25dressrecon" data-selected="n">
 <img class="paper" src="https://jefftan969.github.io/dressrecon/img/dressrecon_icon.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">DressRecon: Freeform 4D Human Reconstruction from Monocular Video</b> <br/> 
+<p><b id="papertitle">DressRecon: Freeform 4D Human Reconstruction from Monocular Video</b> <br/> 
 Jeff Tan, Donglai Xiang, <strong>Shubham Tulsiani</strong>, Deva Ramanan, Gengshan Yang <br/> 
 3DV, 2025 <br/> 
 <a href="https://arxiv.org/pdf/2409.20563">pdf </a>  &nbsp <a href="https://jefftan969.github.io/dressrecon/">project page </a>  &nbsp <a href="javascript:toggleblock('3dv25dressreconBib')">bibtex </a>  &nbsp <a href="https://github.com/jefftan969/dressrecon">code </a> </p>
@@ -905,11 +925,11 @@ hideblock('corl21planarBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iccv21act" data-selected="y">
-<img class="paper" src="https://cs.stanford.edu/~kaichun/papers/where2act.png" />
+<img class="paper" src="https://kaichun-mo.github.io/papers/where2act.png" />
 <p><b id="papertitle">Where2Act: From Pixels to Actions for Articulated 3D Objects</b> <br/> 
 Kaichun Mo, Leonidas J. Guibas, Mustafa Mukadam, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
 ICCV, 2021 <br/> 
-<a href="https://arxiv.org/pdf/2101.02692.pdf">pdf </a>  &nbsp <a href="https://cs.stanford.edu/~kaichun/where2act/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv21actBib')">bibtex </a>  &nbsp <a href="https://github.com/daerduoCarey/where2act">code </a> </p>
+<a href="https://arxiv.org/pdf/2101.02692.pdf">pdf </a>  &nbsp <a href="javascript:toggleblock('iccv21actBib')">bibtex </a>  &nbsp <a href="https://github.com/daerduoCarey/where2act">code </a> </p>
 <div class="papermeta" id="iccv21actMeta">
 <pre xml:space="preserve" id="iccv21actBib">
 
